--- a/FlickRing/Main.storyboard
+++ b/FlickRing/Main.storyboard
@@ -376,7 +376,11 @@
                 </application>
                 <customObject id="elY-qP-5N9" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <customObject id="KjH-TN-y6c" customClass="SPUStandardUpdaterController"/>
-                <customObject id="7H0-Ae-Klq" customClass="AppDelegate" customModule="FlickRing" customModuleProvider="target"/>
+                <customObject id="7H0-Ae-Klq" customClass="AppDelegate" customModule="FlickRing" customModuleProvider="target">
+                    <connections>
+                        <outlet property="updateController" destination="KjH-TN-y6c" id="tHW-jz-uOB"/>
+                    </connections>
+                </customObject>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
